# rust-learning

./: .gitignore  Cargo.toml  flake.nix  package.nix  shell.nix
src/: args.rs  main.rs
