[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[build]
#rustflags = ["-Clink-arg=-fuse-ld=lld"]

[dependencies]
# base64 = "0.21.7"
clap = { version = "4.5.1" }
rustix = "0.38.31"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size.
lto = true
codegen-units = 1